[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/interface/start-button.gd" type="Script" id=1]
[ext_resource path="res://assets/cenario/cozinha/cortina.png" type="Texture" id=2]

[node name="menu" type="Node2D"]

[node name="start" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_right = 100.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="start"]
position = Vector2( 14, 12 )
texture = ExtResource( 2 )

[connection signal="focus_entered" from="start" to="start" method="_on_start_focus_entered"]
[connection signal="focus_exited" from="start" to="start" method="_on_start_focus_exited"]
[connection signal="pressed" from="start" to="start" method="_on_start_pressed"]
